Add basic Registration and Auth logic. Add Services and worker
